[gd_scene load_steps=8 format=2]

[ext_resource path="res://Fonts/fontMenu.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/fontTitle.tres" type="DynamicFont" id=2]
[ext_resource path="res://Main Menu/Main Menu.gd" type="Script" id=3]
[ext_resource path="res://Misc/FPS Label.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fonts/fontTextEdit.tres" type="DynamicFont" id=5]
[ext_resource path="res://Main Menu/NewGameName.gd" type="Script" id=6]
[ext_resource path="res://Main Menu/MenuBackground.tscn" type="PackedScene" id=7]

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" parent="." instance=ExtResource( 7 )]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="FPS Label Layer" parent="." instance=ExtResource( 4 )]

[node name="Label" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 250.0
custom_fonts/font = ExtResource( 2 )
text = "High Command"
align = 1
valign = 1

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 781.0
margin_top = 262.0
margin_right = 1894.0
margin_bottom = 1058.0
custom_fonts/font = ExtResource( 1 )

[node name="NewGameName" type="ConfirmationDialog" parent="."]
margin_left = 540.0
margin_top = 508.0
margin_right = 1340.0
margin_bottom = 605.0
window_title = "Enter New Game Name"
script = ExtResource( 6 )

[node name="TextEdit" type="TextEdit" parent="NewGameName"]
margin_left = 8.0
margin_top = 8.0
margin_right = 792.0
margin_bottom = 61.0
custom_fonts/font = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="."]
margin_left = 100.0
margin_top = 300.0
margin_right = 745.0
margin_bottom = 961.0
__meta__ = {
"_edit_group_": true
}

[node name="NewGame" type="Button" parent="Buttons"]
margin_right = 645.0
margin_bottom = 91.0
custom_fonts/font = ExtResource( 1 )
text = "New Game"
flat = true
align = 0

[node name="NewModdedGame" type="Button" parent="Buttons"]
margin_top = 95.0
margin_right = 645.0
margin_bottom = 186.0
custom_fonts/font = ExtResource( 1 )
text = "New Modded Game"
flat = true
align = 0

[node name="LoadGame" type="Button" parent="Buttons"]
margin_top = 190.0
margin_right = 645.0
margin_bottom = 281.0
custom_fonts/font = ExtResource( 1 )
text = "Load Game"
flat = true
align = 0

[node name="MapEditor" type="Button" parent="Buttons"]
margin_top = 285.0
margin_right = 645.0
margin_bottom = 376.0
custom_fonts/font = ExtResource( 1 )
text = "Map Editor"
flat = true
align = 0

[node name="Settings" type="Button" parent="Buttons"]
margin_top = 380.0
margin_right = 645.0
margin_bottom = 471.0
custom_fonts/font = ExtResource( 1 )
text = "Settings"
flat = true
align = 0

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 475.0
margin_right = 645.0
margin_bottom = 566.0
custom_fonts/font = ExtResource( 1 )
text = "Credits"
flat = true
align = 0

[node name="Quit" type="Button" parent="Buttons"]
margin_top = 570.0
margin_right = 645.0
margin_bottom = 661.0
custom_fonts/font = ExtResource( 1 )
text = "Quit"
flat = true
align = 0

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_PopupMenu_id_pressed"]
[connection signal="confirmed" from="NewGameName" to="." method="_on_NewGameName_confirmed"]
[connection signal="button_up" from="Buttons/NewGame" to="." method="_on_NewGame_button_up"]
[connection signal="button_up" from="Buttons/NewModdedGame" to="." method="_on_NewModdedGame_button_up"]
[connection signal="button_up" from="Buttons/LoadGame" to="." method="_on_LoadGame_button_up"]
[connection signal="button_up" from="Buttons/MapEditor" to="." method="_on_MapEditor_button_up"]
[connection signal="button_up" from="Buttons/Settings" to="." method="_on_Settings_button_up"]
[connection signal="button_up" from="Buttons/Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="Buttons/Quit" to="." method="_on_Quit_button_up"]
